--- a/calculator.css
+++ b/calculator.css
@@ -5,8 +5,9 @@
   margin: 0 auto;
   border-radius: 10px;
   border: 10px solid rgb(211, 201, 201);
-};
-.input {
+}
+
+#display {
   width: 345px;
   height: 100px;
   margin-block-start: 10px;
@@ -14,12 +15,9 @@
   border-radius: 15px;
   background-color: white;
   border: 5px solid rgb(238, 226, 226);
-};
-
-#display {
-    font-size: 40px;
-    color:blueviolet;
-};
+  font-size: 40px; /* Set font size here */
+  color: blueviolet;
+}
 
 button {
   width: 70px;
@@ -30,56 +28,66 @@ button {
   border: none;
   border-radius: 10px;
   font-size: 25px;
-};
+}
 
 button.colorStyle {
   background-color: gainsboro;
-};
+}
 
 .firstRow {
   display: flex;
   flex-direction: row;
   gap: 170px;
   margin-inline-start: 22px;
-};
+}
 
 .secondRow {
   margin-inline-start: 20px;
-};
+}
+
 .thirdRow {
   margin-inline-start: 20px;
-};
+}
+
 .fourthRow {
   margin-inline-start: 20px;
-};
+}
+
 .fifthRow {
   margin-inline-start: 20px;
   margin-block-start: -75px;
-};
+}
+
 .clear {
   background-color: rgb(207, 78, 127);
   color: aqua;
-};
+}
+
 .plus {
   margin-inline-start: 272px;
   margin-block-start: -6px;
-};
+}
+
 .minus {
   background-color: aqua;
-};
+}
+
 .division {
   background-color: aqua;
-};
+}
+
 .multiply {
   background-color: aqua;
-};
+}
+
 .equal {
   background-color: rgb(233, 35, 68);
   color: aqua;
-};
+}
 
 #plus {
   height: 140px;
   margin-block-start: -100px;
   background-color: aqua;
-};
+}
+
