--- a/calculator.css
+++ b/calculator.css
@@ -58,6 +58,7 @@ button.colorStyle {
   margin-block-start: -75px;
 }
 
+/* The symbols "basic maths" */
 .clear {
   background-color: rgb(207, 78, 127);
   color: aqua;
